[Regression] Severe FPS drop with multiple bone shapes in 2.8 #62880

Closed
opened 2019-03-23 14:26:58 +01:00 by lucas veber · 9 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 980 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 398.36

Blender Version
Broken: version: 2.80 (sub 51), branch: master, commit date: 2019-03-23 03:30, hash: 7454fa927b
Worked: Blender 2.79

Short description of error
There is a serious low performance flaw with the current Blender 2.8 build. This did not happen a few days/weeks ago.
On the example scene which is just made of 380 bones and spherical custom shapes, the viewport refresh rate drops from 100 fps in Blender 2.79 to 27 fps in Blender 2.8, when playing animation or simply doing stuff in the viewport.

Exact steps for others to reproduce the error

  • Open the following blend files in Blender 2.79 and Blender 2.8 to compare

  • 380 bones with custom shapes (laggy)
    380_bones.blend

  • 380 objects, no bones (ok)
    380_objects.blend

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 980 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 398.36 **Blender Version** Broken: version: 2.80 (sub 51), branch: master, commit date: 2019-03-23 03:30, hash: `7454fa927b` Worked: Blender 2.79 **Short description of error** There is a serious low performance flaw with the current Blender 2.8 build. This did not happen a few days/weeks ago. On the example scene which is just made of 380 bones and spherical custom shapes, the viewport refresh rate drops from 100 fps in Blender 2.79 to 27 fps in Blender 2.8, when playing animation or simply doing stuff in the viewport. **Exact steps for others to reproduce the error** - Open the following blend files in Blender 2.79 and Blender 2.8 to compare - 380 bones with custom shapes (laggy) [380_bones.blend](https://archive.blender.org/developer/F6869950/380_bones.blend) - 380 objects, no bones (ok) [380_objects.blend](https://archive.blender.org/developer/F6869949/380_objects.blend)
Author

Added subscriber: @LucasVeber

Added subscriber: @LucasVeber
lucas veber changed title from [Regression] Severe lag with multiple bone shapes in 2.8 to [Regression] Severe FPS drop with multiple bone shapes in 2.8 2019-03-23 15:13:47 +01:00

Added subscriber: @ZedDB

Added subscriber: @ZedDB

I when back as far as a build from Jan 11 and the fps is still around 24 back then so at least for me, this is not a recent regression...

I when back as far as a build from Jan 11 and the fps is still around 24 back then so at least for me, this is not a recent regression...
Author

Weird, i'm pretty sure there was not such lag in previous builds. Where can the old builds be found?

Weird, i'm pretty sure there was not such lag in previous builds. Where can the old builds be found?
Author

This is a bit weird, seems some temporary causes are partly responsible for the performances.
I've just opened the blend file again, and now get 60 fps. However, when duplicating 3 times all bones to get 1152 bones, the fps drop is still noticeable:
2.79b : 90-100 fps
2.80: 28 fps

This is a bit weird, seems some temporary causes are partly responsible for the performances. I've just opened the blend file again, and now get 60 fps. However, when duplicating 3 times all bones to get 1152 bones, the fps drop is still noticeable: 2.79b : 90-100 fps 2.80: 28 fps
Clément Foucault was assigned by Sebastian Parborg 2019-03-25 13:15:36 +01:00

Added subscriber: @fclem

Added subscriber: @fclem

I can confirm that the fps is low in 2.8. However as I said before, I can't confirm that this is a recent regression.

@fclem I'm guessing this is drawing related as the viewport is slower when just navigating.

I can confirm that the fps is low in 2.8. However as I said before, I can't confirm that this is a recent regression. @fclem I'm guessing this is drawing related as the viewport is slower when just navigating.

This issue was referenced by 50d75cd528

This issue was referenced by 50d75cd528b904760426ff9bcc31a3794e995edb

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62880
No description provided.