Fix T62880 Severe FPS drop with multiple bone shapes

Fix instancing batches not being reused by custom bone shapes.

Drawing thoses is now faster than 2.79 (40fps instead of  30fps)