source/blender/draw/modes/object_mode.c
@@ -53,6 +53,8 @@
 #include "BKE_particle.h"
 #include "BKE_tracking.h"
 
+#include "BLI_ghash.h"
+
 #include "ED_view3d.h"
 
 #include "GPU_batch.h"
@@ -272,6 +274,8 @@ typedef struct OBJECT_ShadingGroupList {
 typedef struct OBJECT_PrivateData {
   OBJECT_ShadingGroupList sgl;
   OBJECT_ShadingGroupList sgl_ghost;
+
+  GHash *custom_shapes;
 
   /* Outlines */
   DRWShadingGroup *outlines_active;
@@ -1039,6 +1043,8 @@ static void OBJECT_cache_init(void *vedata)
   g_data->xray_enabled = XRAY_ACTIVE(draw_ctx->v3d);
   g_data->xray_enabled_and_not_wire = g_data->xray_enabled &&
                                       draw_ctx->v3d->shading.type > OB_WIRE;
+
+  g_data->custom_shapes = BLI_ghash_ptr_new(__func__);
 
   {
     DRWState state = DRW_STATE_WRITE_COLOR | DRW_STATE_WRITE_DEPTH | DRW_STATE_DEPTH_LESS_EQUAL |
@@ -3288,6 +3294,7 @@ static void OBJECT_cache_populate(void *vedata, Object *ob)
               .bone_envelope = sgl->bone_envelope,
               .bone_axes = sgl->bone_axes,
               .relationship_lines = NULL, /* Don't draw relationship lines */
+              .custom_shapes = stl->g_data->custom_shapes,
           };
           DRW_shgroup_armature_object(ob, view_layer, passes, is_wire);
         }
@@ -3395,6 +3402,11 @@ static void OBJECT_cache_finish(void *vedata)
 
   DRW_pass_sort_shgroup_z(stl->g_data->sgl.image_empties);
   DRW_pass_sort_shgroup_z(stl->g_data->sgl_ghost.image_empties);
+
+  if (stl->g_data->custom_shapes) {
+    /* TODO(fclem): Do not free it for each frame but reuse it. Avoiding alloc cost. */
+    BLI_ghash_free(stl->g_data->custom_shapes, NULL, NULL);
+  }
 }
 
 static void OBJECT_draw_scene(void *vedata)
